# extra_traits

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  cmake_install.cmake  xmake.lua
include/tests/: logical_traits.cpp
include/zxshady/: extra_traits.hpp
include/zxshady/extra_traits/: bind.hpp  casts.hpp  has_operators.hpp  is_brackets_braces_constructible.hpp  is_explicitly_constructible.hpp  is_implicitly_constructible.hpp  is_specialization_of.hpp  is_static_castable.hpp  least_size_int.hpp  literals.hpp  logical_predicates.hpp  logical_traits.hpp  macros.hpp  qualmanip.hpp  standard_library_features.hpp  type_list.hpp  uniform_type_construction.hpp  utility.hpp
include/zxshady/extra_traits/has_operators/: accessors.hpp  arithmetic.hpp  bitwise.hpp  call.hpp  increment_decrement.hpp  logical.hpp  relational.hpp  unary_plus_minus.hpp
include/zxshady/extra_traits/has_operators/impl/: xmacros.hpp
tests/: CMakeLists.txt  cast_const_away.cpp  clone_cv.cpp  clone_pointer.cpp  clone_reference.cpp  cmake_install.cmake  conjunction.cpp  copy_all_extents.cpp  copy_cv.cpp  copy_cvref.cpp  copy_pointer.cpp  copy_reference.cpp  copy_signedness.cpp  disjunction.cpp  inherit_if.cpp  is_bounded_array.cpp  is_braces_constructible.cpp  is_brackets_constructible.cpp  is_explicitly_constructible.cpp  is_inheritable.cpp  is_scoped_enum.cpp  is_specialization_of.cpp  is_specilization.cpp  is_unbounded_array.cpp  is_unscoped_enum.cpp  least_size_int.cpp  logical_traits.cpp  main.cpp  negation.cpp  rebind_template.cpp  remove_all_pointers.cpp  remove_cvref.cpp  test.hpp  type_list.cpp  xmake.lua
tests/has_operator/: plus.cpp
